syntax = "proto3";

option go_package = "github.com/PtrTeixeira/cookbook/proto/strava";

message AthleteResponse {
    int64 id = 1;
    string username = 2;
    string firstname = 3;
    string lastname = 4;
}

message ShortAthlete {
    int64 id = 1;
    int32 resource_state = 2;
}

message AthleteActivity {
    int64 id = 1;
    ShortAthlete athlete = 2;
    string start_date = 10;
    string start_date_local = 11;
}

message TokenResponse {
    string access_token = 1;
    string token_type = 2;
    ShortAthlete athlete = 3;
    string state = 4;
}

message Fault {
    repeated Error errors = 1;
    string message = 2;

    message Error {
        string code = 1;
        string field = 2;
        string resource = 3;
    }
}
